# agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  run.sh
.claude/skills/granola-notion/: SKILL.md
.claude/skills/granola-notion/references/: wiki-correction.md
.claude/skills/morning/: SKILL.md
.claude/skills/notion-todoist-tasks/: SKILL.md
dashboard/: Dockerfile  docker-compose.yml  package-lock.json  package.json
dashboard/src/: index.ts
jobs/granola_notion_sync/: job.py  precheck.md  prompt.md
jobs/hello/: job.py  prompt.md
jobs/morning_brief/: job.py  prompt.md  template.html.j2
jobs/notion_todoist_sync/: job.py  precheck.md  prompt.md
mcp/: servers.template.json
runner/: config.py  google_tools.py  preflight.py  render_brief.py  run_job.py
scripts/: google-oauth.py  install-hooks.sh  install-launchd.sh  render-mcp-json.py  slack-token.py  sync-secrets-from-1password.sh  todoist-api.sh
scripts/hooks/: pre-commit
