[project]
name = "agent-jobs"
version = "0.1.0"
description = "Scheduled local agent jobs on the Claude Agent SDK (launchd-driven)"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
]

[tool.uv]
package = false
